# FlappyDirt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
res/: .ground.png-autosave.kra  .pipe.png-autosave.kra  flappy.png~  ground.png~  pipe.png~  settings.json
src/: background.cpp  background.h  flappy.cpp  flappy.h  game.cpp  game.h  ground.cpp  ground.h  main.cpp  object.cpp  object.h  pipes.cpp  pipes.h
